@@ -5,6 +5,7 @@ Version 3.1.0 - SVN
  - Add PHP session support as alternative to IP address authentication.
    Backport from patches by Tobias Werth.
  - Fix specification of checktestdata script syntax.
+ - Small bugfixes and improvements to checktestdata program.
 
 Version 3.0.0 Release Candidate 2 - 3 September 2009
 ----------------------------------------------------
